@@ -4,7 +4,7 @@ $EM_CONF[$_EXTKEY] = [
     'title' => 'Static Info Tables (it)',
     'description' => 'Italian (it) language pack for the Static Info Tables providing localized names for countries, currencies and so on.',
     'category' => 'misc',
-    'version' => '6.9.0',
+    'version' => '6.9.1',
     'state' => 'stable',
     'uploadfolder' => 0,
     'createDirs' => '',
